gccida/g1/output_constant_pool
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4419:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4449:51: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( j = cfun->epilogue_delay_list; j; j = ( rtx)j[1] ) 
                                                  ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4462:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)constant->fld[0]; 
                      ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4469:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)constant->fld[0]; 
                      ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4475:52: error: use of undeclared identifier 'a'
fprintf( asm_out_file, ".%s%u:\n", ( const char *)&a.dw_attr_val, ( unsigned int)k->labelno); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4501:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16.r[2] = ( __int64)constant[2]; 
                     ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4503:16: error: passing 'enum machine_mode' to parameter of incompatible type 'realvaluetype'
assemble_real( mode, k->align, v16); 
               ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4542:18: error: member reference base type 'const __m128i' (vector of 2 'long long' values) is not a structure or union
v17.r[2] = v13[2].m128i_i64[0]; 
           ~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/varasm.c:4544:16: error: passing 'const enum machine_mode' to parameter of incompatible type 'realvaluetype'
assemble_real( inner_mode_array[k->mode], k->align, v17); 
               ^~~~~~~~~~~~~~~~~~~~~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_constant_pool/src/obj/varasm.o] Error 1
